--- a/report.tex
+++ b/report.tex
@@ -13,7 +13,7 @@
 \usepackage{microtype}      % microtypography
 \usepackage{lipsum}
 
-\title{Painter Recognition: a comparison between VGG, AlexNet and ResNet}
+\title{Painter Recognition: a comparison between AlexNet, GoogLeNet and ResNeXt}
 
 
 \author{
@@ -61,16 +61,20 @@ Università di Padova \\
 \lipsum[3]
 
 
-\section{Style Transfer}
-\label{sec:headings}
+\section{Related Works}
 
-\lipsum[4] See Section \ref{sec:headings}.
+\lipsum[4] See Section \cite{ArtistIdCNN}
 
 \paragraph{Training from scratch}
 \lipsum[7]
 
-\section{Pytorch implementation}
-\label{sec:others}
+\section{Dataset}
+
+\section{Method}
+
+\section{Experiment}
+
+\section{Conclusion}
 
 %%% Comment out this section when you \bibliography{references} is enabled.
 \begin{thebibliography}{1}
