add a first structure

--- a/report.tex
+++ b/report.tex
@@ -53,7 +53,7 @@ Università di Padova \\
 
 
 % keywords can be removed
-\keywords{Neural Network \and Painter Recognition}
+\keywords{Neural Network \and Painter Recognition \and CNN \and ResNeXt \and GoogLeNet \and AlexNet \and Transfer Learning}
 
 
 \section{Introduction}
@@ -65,14 +65,31 @@ Università di Padova \\
 
 \lipsum[4] See Section \cite{ArtistIdCNN}
 
-\paragraph{Training from scratch}
-\lipsum[7]
-
 \section{Dataset}
+
+\paragraph{Overview}
+
+\paragraph{Preprocessing}
+
+\paragraph{Data augmentation}
 
 \section{Method}
 
-\section{Experiment}
+\paragraph{CNNs from scratch}
+
+\paragraph{CNNs with Transfer Learning}
+
+
+\section{Experiments}
+
+\paragraph{Setup}
+
+\paragraph{Implementation Details}
+
+\paragraph{Evaluation Metrics}
+
+
+
 
 \section{Conclusion}
 
